--- a/Resources/Prototypes/_NF/Entities/Objects/Weapons/Guns/expedition_guns.yml
+++ b/Resources/Prototypes/_NF/Entities/Objects/Weapons/Guns/expedition_guns.yml
@@ -117,7 +117,7 @@
 - type: entity
   parent:
   - BaseExpeditionWeaponTier1
-  - WeaponRevolverArgenti
+  - NFWeaponRevolverArgenti
 #  categories: [ HideSpawnMenu ]
   id: WeaponRevolverArgentiExpedition
   name: worn Argenti
