--- a/Resources/Prototypes/_NF/Catalog/VendingMachines/Inventories/DEBUGguns.yml
+++ b/Resources/Prototypes/_NF/Catalog/VendingMachines/Inventories/DEBUGguns.yml
@@ -20,7 +20,7 @@
     WeaponRevolverFitz: 4294967295
     WeaponRevolverFaith: 4294967295
     WeaponRevolverLucky: 4294967295
-    WeaponRevolverArgenti: 4294967295
+    NFWeaponRevolverArgenti: 4294967295
   # SMGs
     WeaponSubMachineGunAtreides: 4294967295
     WeaponSubMachineGunC20r: 4294967295
