Reapply "fucking finally"
This reverts commit 60d8af456290bb9c9dc3cafb1c77e80732ef958d.

--- a/Resources/Prototypes/Maps/core.yml
+++ b/Resources/Prototypes/Maps/core.yml
@@ -8,6 +8,7 @@
     Core:
       stationProto: StandardNanotrasenStation
       components:
+        - type: TransferableStation
         - type: StationNameSetup
           mapNameTemplate: 'HardLight Core Station'
 #          nameGenerator:
