--- a/Resources/Prototypes/Maps/reach.yml
+++ b/Resources/Prototypes/Maps/reach.yml
@@ -8,6 +8,7 @@
     Reach:
       stationProto: StandardNanotrasenStation
       components:
+        - type: TransferableStation
         - type: StationNameSetup
           mapNameTemplate: '{0} Reach Transport {1}'
           nameGenerator:
