--- a/Resources/Prototypes/Maps/reach.yml
+++ b/Resources/Prototypes/Maps/reach.yml
@@ -8,12 +8,11 @@
     Reach:
       stationProto: StandardNanotrasenStation
       components:
-        - type: TransferableStation
         - type: StationNameSetup
-          mapNameTemplate: '{0} Reach Transport {1}'
-          nameGenerator:
-            !type:NanotrasenNameGenerator
-            prefixCreator: 'SC'
+          mapNameTemplate: 'Hardlight Station'
+          # nameGenerator:
+            # !type:NanotrasenNameGenerator
+            # prefixCreator: 'SC'
         - type: StationEmergencyShuttle
           emergencyShuttlePath: /Maps/Shuttles/emergency.yml
         - type: StationJobs
