--- a/Resources/Prototypes/_CD/Recipes/Crafting/Graphs/narcotics.yml
+++ b/Resources/Prototypes/_CD/Recipes/Crafting/Graphs/narcotics.yml
@@ -1,3 +1,4 @@
+
 - type: constructionGraph
   id: WrappedBakePackage
   start: start
@@ -24,3 +25,147 @@
         quantity: 30
   - node: bakeWrapped
     entity: WrappedBakePackage
+
+- type: constructionGraph
+  id: WrappedGritPackage
+  start: start
+  graph:
+  - node: start
+    edges:
+    - to: empty
+      steps:
+      - tag: EmptyPacket
+        name: an empty packet
+        doAfter: 1
+  - node: empty
+    entity: EmptyPacket
+    edges:
+    - to: gritWrapped
+      steps:
+      - tool: Screwing
+        doAfter: 1
+      conditions:
+      - !type:MinSolution
+        solution: drink
+        reagent:
+          ReagentId: Grit
+        quantity: 30
+  - node: gritWrapped
+    entity: WrappedGritPackage
+
+- type: constructionGraph
+  id: WrappedRustPackage
+  start: start
+  graph:
+  - node: start
+    edges:
+    - to: empty
+      steps:
+      - tag: EmptyPacket
+        name: an empty packet
+        doAfter: 1
+  - node: empty
+    entity: EmptyPacket
+    edges:
+    - to: rustWrapped
+      steps:
+      - tool: Screwing
+        doAfter: 1
+      conditions:
+      - !type:MinSolution
+        solution: drink
+        reagent:
+          ReagentId: Rust
+        quantity: 30
+  - node: rustWrapped
+    entity: WrappedRustPackage
+
+- type: constructionGraph
+  id: WrappedBreakoutPackage
+  start: start
+  graph:
+  - node: start
+    edges:
+    - to: empty
+      steps:
+      - tag: EmptyPacket
+        name: an empty packet
+        doAfter: 1
+  - node: empty
+    entity: EmptyPacket
+    edges:
+    - to: breakoutWrapped
+      steps:
+      - tool: Screwing
+        doAfter: 1
+      conditions:
+      - !type:MinSolution
+        solution: drink
+        reagent:
+          ReagentId: Breakout
+        quantity: 30
+  - node: breakoutWrapped
+    entity: WrappedBreakoutPackage
+
+- type: constructionGraph
+  id: WrappedDrugPackage
+  start: start
+  graph:
+  - node: start
+    edges:
+    - to: empty
+      steps:
+      - tag: EmptyPacket
+        name: an empty packet
+        doAfter: 1
+  - node: empty
+    entity: EmptyPacket
+    edges:
+    - to: bakeWrapped
+      steps:
+      - tool: Screwing
+        doAfter: 1
+      conditions:
+      - !type:MinSolution
+        solution: drink
+        reagent:
+          ReagentId: Bake
+        quantity: 30
+    - to: gritWrapped
+      steps:
+      - tool: Screwing
+        doAfter: 1
+      conditions:
+      - !type:MinSolution
+        solution: drink
+        reagent:
+          ReagentId: Grit
+        quantity: 30
+    - to: rustWrapped
+      steps:
+      - tool: Screwing
+        doAfter: 1
+      conditions:
+      - !type:MinSolution
+        solution: drink
+        reagent:
+          ReagentId: Rust
+        quantity: 30
+    - to: breakoutWrapped
+      steps:
+      - tool: Screwing
+        doAfter: 1
+      conditions:
+      - !type:MinSolution
+        solution: drink
+        reagent:
+          ReagentId: Breakout
+        quantity: 30
+  - node: bakeWrapped
+    entity: WrappedBakePackage
+  - node: gritWrapped
+    entity: WrappedGritPackage
+  - node: rustWrapped
+    entity: WrappedRustPackage
+  - node: breakoutWrapped
+    entity: WrappedBreakoutPackage
