--- a/Resources/Prototypes/_CD/Entities/Objects/Misc/contraband.yml
+++ b/Resources/Prototypes/_CD/Entities/Objects/Misc/contraband.yml
@@ -1,3 +1,35 @@
+# Base packet entities
+- type: entity
+  parent: [BaseItem, BaseC3Contraband]
+  id: BaseWrappedPacket
+  abstract: true
+  components:
+  - type: Sprite
+    sprite: _CD/Objects/Misc/Contraband/drug_packets.rsi
+    state: brown_icon
+
+- type: entity
+  parent: [BaseItem, BaseC3Contraband]  
+  id: BaseOpenedPacket
+  abstract: true
+  components:
+  - type: SolutionContainerManager
+    solutions:
+      drink:
+        maxVol: 30
+  - type: Spillable
+    solution: drink
+  - type: DrawableSolution
+    solution: drink
+  - type: RefillableSolution
+    solution: drink
+  - type: DrainableSolution
+    solution: drink
+  - type: Sprite
+    sprite: _CD/Objects/Misc/Contraband/drug_packets.rsi
+    state: brown_icon
+    color: "#D4B4A3"
+
 - type: entity
   parent: [BaseItem, BaseC3Contraband]
   id: EmptyPacket
@@ -26,22 +58,155 @@
     tags:
     - EmptyPacket
   - type: Construction
-    graph: WrappedBakePackage
+    graph: WrappedDrugPackage
     node: empty
-    defaultTarget: bakeWrapped
 
 - type: entity
-  parent: [BaseItem, BaseC3Contraband]
+  parent: BaseWrappedPacket
   id: WrappedBakePackage
   name: sealed narcotic packet
   description: Worth a pretty penny, the powder inside looks chalky.
   suffix: Bake
   components:
   - type: StaticPrice
-    price: 10000 # worth the risk?
-  - type: Sprite
-    sprite: _CD/Objects/Misc/Contraband/drug_packets.rsi
-    state: brown_icon
+    price: 17500 # worth the risk? #HL
+  - type: Butcherable
+    butcheringType: Knife
+    spawned:
+    - id: OpenedBakePacket
+      amount: 1
+    butcherSound:
+      path: /Audio/Effects/packetrip.ogg
   - type: Construction
     graph: WrappedBakePackage
     node: bakeWrapped
+
+## START HL
+- type: entity
+  parent: BaseWrappedPacket
+  id: WrappedRustPackage
+  name: sealed narcotic packet
+  description: Worth a pretty penny, the liquid inside the vials looks oily.
+  suffix: Rust
+  components:
+  - type: StaticPrice
+    price: 5000 # worth the risk? #HL
+  - type: Butcherable
+    butcheringType: Knife
+    spawned:
+    - id: OpenedRustPacket
+      amount: 1
+    butcherSound:
+      path: /Audio/Effects/packetrip.ogg
+  - type: Construction
+    graph: WrappedRustPackage
+    node: rustWrapped
+
+- type: entity
+  parent: BaseWrappedPacket
+  id: WrappedBreakoutPackage
+  name: sealed narcotic packet
+  description: Worth a pretty penny, the powder inside looks coarse.
+  suffix: Breakout
+  components:
+  - type: StaticPrice
+    price: 1500 # worth the risk? #HL
+  - type: Butcherable
+    butcheringType: Knife
+    spawned:
+    - id: OpenedBreakoutPacket
+      amount: 1
+    butcherSound:
+      path: /Audio/Effects/packetrip.ogg
+  - type: Construction
+    graph: WrappedBreakoutPackage
+    node: breakoutWrapped
+
+- type: entity
+  parent: BaseWrappedPacket
+  id: WrappedGritPackage
+  name: sealed narcotic packet
+  description: Worth a pretty penny, the liquid inside the vials looks volatile.
+  suffix: Grit
+  components:
+  - type: StaticPrice
+    price: 50000 # worth the risk? #HL
+  - type: Butcherable
+    butcheringType: Knife
+    spawned:
+    - id: OpenedGritPacket
+      amount: 1
+    butcherSound:
+      path: /Audio/Effects/packetrip.ogg
+  - type: Construction
+    graph: WrappedGritPackage
+    node: gritWrapped
+
+## Opened Packet Entities
+- type: entity
+  parent: BaseOpenedPacket
+  id: OpenedBakePacket
+  name: opened narcotic packet
+  description: Chalky powder spills from this torn packet. Handle with care.
+  suffix: Bake
+  components:
+  - type: StaticPrice
+    price: 8750 # reduced value when opened
+  - type: SolutionContainerManager
+    solutions:
+      drink:
+        maxVol: 30
+        reagents:
+        - ReagentId: Bake
+          Quantity: 30
+
+- type: entity
+  parent: BaseOpenedPacket
+  id: OpenedRustPacket
+  name: opened narcotic packet
+  description: Oily liquid seeps from broken vials in this torn packet.
+  suffix: Rust
+  components:
+  - type: StaticPrice
+    price: 2500
+  - type: SolutionContainerManager
+    solutions:
+      drink:
+        maxVol: 30
+        reagents:
+        - ReagentId: Rust
+          Quantity: 30
+
+- type: entity
+  parent: BaseOpenedPacket
+  id: OpenedBreakoutPacket
+  name: opened narcotic packet
+  description: Coarse powder scatters from this damaged packet.
+  suffix: Breakout
+  components:
+  - type: StaticPrice
+    price: 750
+  - type: SolutionContainerManager
+    solutions:
+      drink:
+        maxVol: 30
+        reagents:
+        - ReagentId: Breakout
+          Quantity: 30
+
+- type: entity
+  parent: BaseOpenedPacket
+  id: OpenedGritPacket
+  name: opened narcotic packet
+  description: Volatile liquid bubbles from cracked vials in this ripped packet. Extremely dangerous.
+  suffix: Grit
+  components:
+  - type: StaticPrice
+    price: 25000
+  - type: SolutionContainerManager
+    solutions:
+      drink:
+        maxVol: 30
+        reagents:
+        - ReagentId: Grit
+          Quantity: 30
