--- a/Resources/Prototypes/_CD/Entities/Objects/Misc/contraband.yml
+++ b/Resources/Prototypes/_CD/Entities/Objects/Misc/contraband.yml
@@ -17,6 +17,11 @@
     solutions:
       drink:
         maxVol: 30
+  - type: MixableSolution
+    solution: drink
+  - type: SolutionTransfer
+    canChangeTransferAmount: true
+  - type: Drink
   - type: Spillable
     solution: drink
   - type: DrawableSolution
@@ -25,6 +30,10 @@
     solution: drink
   - type: DrainableSolution
     solution: drink
+  - type: UserInterface
+    interfaces:
+      enum.TransferAmountUiKey.Key:
+        type: TransferAmountBoundUserInterface
   - type: Sprite
     sprite: _CD/Objects/Misc/Contraband/drug_packets.rsi
     state: brown_icon
@@ -34,7 +43,7 @@
   parent: [BaseItem, BaseC3Contraband]
   id: EmptyPacket
   name: empty packet
-  description: Worth a pretty penny?
+  description: Worth a pretty penny? Fill with drugs and right-click to seal.
   suffix: Cardboard
   components:
   - type: StaticPrice
@@ -57,6 +66,7 @@
   - type: Tag
     tags:
     - EmptyPacket
+  - type: PacketSealing
   - type: Construction
     graph: WrappedDrugPackage
     node: empty
@@ -77,9 +87,6 @@
       amount: 1
     butcherSound:
       path: /Audio/Effects/packetrip.ogg
-  - type: Construction
-    graph: WrappedBakePackage
-    node: bakeWrapped
 
 ## START HL
 - type: entity
@@ -98,9 +105,6 @@
       amount: 1
     butcherSound:
       path: /Audio/Effects/packetrip.ogg
-  - type: Construction
-    graph: WrappedRustPackage
-    node: rustWrapped
 
 - type: entity
   parent: BaseWrappedPacket
@@ -118,9 +122,6 @@
       amount: 1
     butcherSound:
       path: /Audio/Effects/packetrip.ogg
-  - type: Construction
-    graph: WrappedBreakoutPackage
-    node: breakoutWrapped
 
 - type: entity
   parent: BaseWrappedPacket
@@ -138,9 +139,6 @@
       amount: 1
     butcherSound:
       path: /Audio/Effects/packetrip.ogg
-  - type: Construction
-    graph: WrappedGritPackage
-    node: gritWrapped
 
 ## Opened Packet Entities
 - type: entity
