Fixed resomi and vox accessory slot errors, added latex suits and four admin clothes, removed trash tag from non-trash items for later use, added firesuit crop tops and added things to inventories where warranted

--- a/Resources/Prototypes/Catalog/VendingMachines/Inventories/atmosdrobe.yml
+++ b/Resources/Prototypes/Catalog/VendingMachines/Inventories/atmosdrobe.yml
@@ -15,5 +15,6 @@
     ClothingOuterWinterAtmos: 2
     ClothingNeckScarfStripedLightBlue: 3
     ClothingShoesBootsWinterAtmos: 2 #Delta V: Add departmental winter boots
+    ClothingUniformFiresuitAtmosCroptop: 2 # Hardlight
   contrabandInventory:
     ToyFigurineAtmosTech: 1
