Fixing a thing again

--- a/Resources/Prototypes/Floof/Entities/Mobs/Species/resomi.yml
+++ b/Resources/Prototypes/Floof/Entities/Mobs/Species/resomi.yml
@@ -78,6 +78,11 @@
             32:
               sprite: Floof/Mobs/Species/Resomi/displacement.rsi
               state: jumpsuit
+        outerClothing:
+          sizeMaps:
+            32:
+              sprite: Floof/Mobs/Species/Resomi/displacement.rsi
+              state: jumpsuit
         accessory2:
           sizeMaps:
             32:
