--- a/Resources/Prototypes/_HL/Shipyard/Expedition/peacekeeper.yml
+++ b/Resources/Prototypes/_HL/Shipyard/Expedition/peacekeeper.yml
@@ -11,7 +11,7 @@
   id: Peacekeeper
   parent: BaseVessel
   name: SCC Peacekeeper
-  description: Civilian conversion of an old military light frigate from the early days of humanity's expansion to the stars, predating FTL technology. Manufactured by Langstad-Voigt Heavy Industries.
+  description: A fairly old, yet reliable ship, formally issued to Peacekeepers involved in cross-corporate skirmishes. Its built to have everything a group of 3-4 might need to stay alive and relatively happy if such conflicts were to drag on for a while. 
   price: 90000 # ~70000 on mapinit + roughly 30% markup
   category: Medium
   group: Expedition
