--- a/Resources/Prototypes/_HL/Shipyard/Syndicate/copperhead.yml
+++ b/Resources/Prototypes/_HL/Shipyard/Syndicate/copperhead.yml
@@ -13,7 +13,7 @@
   parent: BaseVesselAntag
   name: Copperhead
   description: "An old model of patrol boat, modernized to fit new Syndicate standards."
-  price: 100000 #Appraises at ~19000. It's a smuggling ship. Of course it's going to be hella expensive due to the profit potential.
+  price: 73500 #49000, 50% markup
   category: Medium
   group: Syndicate
   shuttlePath: /Maps/_HL/Shuttles/Syndicate/Copperhead.yml
