Fulton Fix (Sort Of)
Fultons and Fulton Beacons can now actually be unlocked and made.  Requires Advanced Tools research and a protolathe.

--- a/Resources/Prototypes/Research/industrial.yml
+++ b/Resources/Prototypes/Research/industrial.yml
@@ -178,8 +178,8 @@
     - UtilityBeltChiefEngineer
     - BorgModuleAdvancedTool
     - BorgModuleRCD
-    # - Fulton # Frontier
-    # - FultonBeacon # Frontier
+    - Fulton # Frontier
+    - FultonBeacon # Frontier
     - NFBlueprintPowerDrill # Frontier
     - NFBlueprintJawsOfLife # Frontier
     - NFBlueprintWelderExperimental # Frontier
