--- a/Resources/Prototypes/Entities/Structures/Piping/Atmospherics/special.yml
+++ b/Resources/Prototypes/Entities/Structures/Piping/Atmospherics/special.yml
@@ -54,3 +54,7 @@
   - type: Tag
     tags:
       - SpreaderIgnore
+  - type: RCDDeconstructable # HARDLIGHT
+    cost: 10 # HARDLIGHT
+    delay: 10 # HARDLIGHT
+  - type: rcd
