--- a/Resources/Prototypes/_HL/Entities/Stations/nanotrasen.yml
+++ b/Resources/Prototypes/_HL/Entities/Stations/nanotrasen.yml
@@ -129,6 +129,7 @@
   parent:
   - StandardFrontierOutpost
   - BaseStationRecords
+  - BaseStationExpeditions
   categories: [ HideSpawnMenu ]
 
 - type: entity
