--- a/Resources/Prototypes/_HL/Recipes/construction/Graphs/furniture/shelf.yml
+++ b/Resources/Prototypes/_HL/Recipes/construction/Graphs/furniture/shelf.yml
@@ -6,7 +6,7 @@
     edges:
     - to: done
       steps:
-      - material: Platsteel
+      - material: Steel
         amount: 30
         doAfter: 5
   - node: done
